--- a/styles/aboutus.css
+++ b/styles/aboutus.css
@@ -91,6 +91,7 @@
 .ourstory{
     min-width: 100%;
 }
+
 .ourstory .ourstory-title{
     color: #fff;
     text-align: center;
@@ -216,10 +217,12 @@
 .owned .owned-card .pic{
     max-width: 40%;
 }
+
 .owned .owned-card .pic img{
     max-width: 100%;
     border-radius: 6px;
 }
+
 .owned .owned-card .txt{
     max-width: 60%;
     margin: 30px;
@@ -261,16 +264,6 @@
     justify-content: center;
     background-color: #b28850;
 }
-
-/* .joinus .joinus-title{
-    max-width: 100%;
-    color: #fff;
-    margin: -80px 0;
-    text-align: center;
-    font-size: 1.75rem;
-    letter-spacing: 10px;
-    text-shadow: 3px 3px 10px #000;
-} */
 
 .joinus .pic{
     max-width: 50%;
@@ -327,9 +320,6 @@
     
     /* 啤酒分隔線 */
     .little{
-        padding: 50px;
-        background-image: url(../images/about_littlebeer.png);
-        background-repeat: repeat-x;
         margin: 5% 0;
     }
     
@@ -338,23 +328,13 @@
     }
 
     /* 經營者區開始 */
-    .owned{
-        max-width: 1200px;
-        margin: auto;
-        display: flex;
-        flex-flow: column wrap;
-        justify-content: center;
-    }
     
     .owned h3{
         margin: 10px auto;
         align-items: center;
     }
     
-    .owned .owned-card{
-        flex-direction: column;
-    }
-    
+    .owned .owned-card,
     .owned .dad{
         flex-direction: column;
     }
@@ -364,14 +344,13 @@
         margin: auto;
     }
     .owned .owned-card .pic img{
-        max-width: 100%;
         border-radius: 0;
     }
+
     .owned .owned-card .txt{
         max-width: 100%;
         padding: 2%;
         margin: 0;
-        align-items: center;
     }
     
     .owned .owned-card .txt p:first-of-type{
@@ -387,8 +366,6 @@
     /* 加入我們 開始 */
     .joinus{
         margin: 0 auto 50px;
-        display: flex;
-        justify-content: center;
         flex-direction: column;
     }
     
@@ -401,6 +378,7 @@
         font-size: 1.5rem;
         line-height: 1.5;
     }
+    
     .joinus .txt{
         min-width: 75%;
         margin: auto;
@@ -441,9 +419,6 @@
     
     /* 啤酒分隔線 */
     .little{
-        padding: 50px;
-        background-image: url(../images/about_littlebeer.png);
-        background-repeat: repeat-x;
         margin: 5% 0;
     }
     
@@ -452,13 +427,6 @@
     }
 
     /* 經營者區開始 */
-    .owned{
-        max-width: 1200px;
-        margin: auto;
-        display: flex;
-        flex-flow: column wrap;
-        justify-content: center;
-    }
     
     .owned h3{
         padding: 2%;
@@ -466,10 +434,7 @@
         align-items: center;
     }
     
-    .owned .owned-card{
-        flex-direction: column;
-    }
-    
+    .owned .owned-card,
     .owned .dad{
         flex-direction: column;
     }
@@ -479,14 +444,13 @@
         margin: auto;
     }
     .owned .owned-card .pic img{
-        max-width: 100%;
         border-radius: 0;
     }
+
     .owned .owned-card .txt{
         max-width: 100%;
         padding: 2%;
         margin: 0;
-        align-items: center;
     }
     
     .owned .owned-card .txt p:first-of-type{
@@ -503,8 +467,6 @@
     /* 加入我們 開始 */
     .joinus{
         margin: 0 auto 50px;
-        display: flex;
-        justify-content: center;
         flex-direction: column;
     }
     
@@ -517,6 +479,7 @@
         font-size: 1.5rem;
         line-height: 1.5;
     }
+
     .joinus .txt{
         min-width: 75%;
         margin: auto;
