--- a/styles/food.css
+++ b/styles/food.css
@@ -69,8 +69,6 @@ h1 {
 
 .classic-beer .beer-container .beer .pic img{
     max-width: 100%;
-    /* width: 150px; */
-    /* height: 400px; */
     vertical-align: middle;
     transition: 1.5s;
 }
@@ -188,22 +186,30 @@ h1 {
 }
 
 .delicious-food .btn{
-    border: 2px solid #b28850;
     max-width: 4%;
     padding: 10px;
     margin: 10px auto 20px;
     border-radius: 5px;
     transition: .5s;
+    cursor: pointer;
+    text-align: center;
+    background-color: #5E5E90;
+    box-shadow: 3px 3px 10px #000;
 }
 
 .delicious-food .btn a{
     font-size: 1rem;
     display: block;
-    text-align: center;
     text-decoration: none;
-    color: #b28850;
+    color: #fff;
     transition: .5s;
 }
+
+.delicious-food .btn:hover{
+    scale: 1.1;
+    transition: .3s;
+}
+
 
 /* 手機版菜單 */
 .delicious-food .phonemenubtn{
@@ -285,15 +291,7 @@ h1 {
     }
 /* 手機版菜單結束 */
 
-.delicious-food .btn:hover{
-    background-color: #000;
-    scale: 1.1;
-    transition: .3s;
-}
-.delicious-food .btn:hover a{
-    color: #ffe75f;
-    transition: .3s;
-}
+
 /* 內用菜單正面 */
 .delicious-food .menu-box{
     width: 800px;
@@ -468,16 +466,13 @@ h1 {
         border: 2px solid #b28850;
         max-width: 30%;
         padding: 10px;
-        margin: 10px auto 20px;
-        border-radius: 5px;
+        background-color: transparent;
+        box-shadow: none;
     }
     
     .delicious-food .btn a{
-        font-size: 1rem;
         padding: 3%;
-        display: block;
         text-align: center;
-        text-decoration: none;
         color: #b28850;
     }
 
@@ -489,29 +484,15 @@ h1 {
      /* beer按鈕 */
     .beer-btn{
         display: block;
-        max-width: 100%;
-        text-align: center;
         margin: 1.5% 2.5% 0;
         padding: 2%;
-        color: #b28850;
-    }
-    .beer-btn i{
-        display: inline-block;
-        margin: 0 5%;
-        font-size: 1.25rem;
-    }
-    /* 手機菜單彈窗 */
-    .delicious-food .box {
-        display: none;
-        position: fixed;
-        inset: 0;
-        width: 100%;
-        height: 100%;
-        background-color: #0008;
-        justify-content: center;
-        align-items: center;
     }
 
+    .beer-btn i{
+        margin: 0 5%;
+    }
+    
+    /* 手機菜單彈窗 */
     .delicious-food .box .box-content {
         width: 60%;
     }
@@ -522,15 +503,11 @@ h1 {
     }
 }
 @media screen and (max-width:767px) {
-    body *{
-        overflow: hidden;
-    }
     
     h1 {
         padding: 5% 0;
         font-size: 2.5rem;
         margin: 10px 0;
-        text-align: center;
     }
     
     /* 經典啤酒區 */
@@ -557,16 +534,13 @@ h1 {
         border: 2px solid #b28850;
         max-width: 30%;
         padding: 10px;
-        margin: 10px auto 20px;
-        border-radius: 5px;
+        background-color: transparent;
+        box-shadow: none;
     }
     
     .delicious-food .btn a{
-        font-size: 1rem;
         padding: 3%;
-        display: block;
         text-align: center;
-        text-decoration: none;
         color: #b28850;
     }
 
@@ -578,29 +552,15 @@ h1 {
     /* beer按鈕 */
     .beer-btn{
         display: block;
-        max-width: 100%;
-        text-align: center;
         margin: 1.5% 2.5% 0;
         padding: 2%;
-        color: #b28850;
     }
+
     .beer-btn i{
-        display: inline-block;
         margin: 0 5%;
-        font-size: 1.25rem;
     }
 
     /* 手機菜單彈窗 */
-    .delicious-food .box {
-        display: none;
-        position: fixed;
-        inset: 0;
-        width: 100%;
-        height: 100%;
-        background-color: #0008;
-        justify-content: center;
-        align-items: center;
-    }
 
     .delicious-food .box .box-content {
         width: 60%;
