--- a/styles/food.css
+++ b/styles/food.css
@@ -186,7 +186,7 @@ h1 {
 }
 
 .delicious-food .btn{
-    max-width: 4%;
+    max-width: 5%;
     padding: 10px;
     margin: 10px auto 20px;
     border-radius: 5px;
@@ -476,6 +476,10 @@ h1 {
         color: #b28850;
     }
 
+    .delicious-food .btn:hover{
+        scale: 1;
+    }
+
     .delicious-food .phonemenubtn,
     .delicious-food .phonemenubtn a{
         display: block;
@@ -542,6 +546,10 @@ h1 {
         padding: 3%;
         text-align: center;
         color: #b28850;
+    }
+
+    .delicious-food .btn:hover{
+        scale: 1;
     }
 
     .delicious-food .phonemenubtn,
